# lattice-type

./: Cargo.toml  README.md  input.json
src/: config.rs  lattice.rs  lib.rs  main.rs  potentials.rs
